# geolocate

./: Cargo.toml  README.md  justfile  rustfmt.toml
geolocate/: Cargo.toml  README.md
geolocate_bin/: Cargo.toml  build.rs
geolocate_bin/src/: main.rs
geolocate_lib/: Cargo.toml
geolocate_lib/src/: cli.rs  completions.rs  config.rs  geolocation.rs  helpers.rs  lib.rs  parser.rs  run.rs  traits.rs
src/: config.rs  geolocation.rs  helpers.rs  lib.rs  location.rs  main.rs  parser.rs  traits.rs
src/argument_parser/: argument_parser.rs  mod.rs  traits.rs
src/config/: config.rs  mod.rs
src/geolocate_lib/: cli.rs  completions.rs  config.rs  geolocation.rs  helpers.rs  ip2location.rs  ipgeolocation.rs  mod.rs  parser.rs  run.rs  traits.rs
src/geolocation/: builder.rs  geolocation.rs  mod.rs
src/location/: mod.rs
test_files/: ip_addrs_with_error.txt
tests/: ip_addrs.txt
