
[package]
name = "geolocate"
version = "5.3.2"
edition = "2021"
authors = ["Nagy Botond benjiwonton@gmail.com"]
description = "A CLI for geolocation data providers"
readme = "README.md"
repository = "https://github.com/westernwontons/geolocate"
license = "MIT"
keywords = ["cli", "geolocation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.3"
colored = "2.0.0"
confy = "0.5.1"
json-color = "0.7.1"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
