[package]
name = "geolocate_bin"
version = "0.3.0"
edition = "2021"
authors = ["Nagy Botond benjiwonton@gmail.com"]
description = "A CLI for geolocation data providers"
readme = "README.md"
repository = "https://github.com/westernwontons/geolocate"
license = "MIT"
keywords = ["cli", "geolocation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.69"
geolocate_lib = {path = "../geolocate_lib", version = "0.3.0"}
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros"] }
