[package]
name = "geolocate_lib"
version = "3.0.1"
edition = "2021"
authors = ["Nagy Botond benjiwonton@gmail.com"]
description = "A CLI for geolocation data providers"
readme = "README.md"
repository = "https://github.com/westernwontons/geolocate"
license = "MIT"
keywords = ["cli", "geolocation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
clap_complete = "4.1.2"
colored = "2.0.0"
confy = "0.5.1"
json-color = "0.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.7.2"

[build-dependencies]
clap = "4.1.6"
clap_complete = "4.1.2"
